<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kixx Lubricant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="UserProfile_Gender">

        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>


    </string-array>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string-array name="oil_qty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="how_are_we_doing">How was your experience with us?</string>
    <string name="Please_give_us_your_feedback">Give us your feedback</string>
    <string name="eligible_for_our_next_promotion">Fill this to become eligible for our next promotion</string>
    <string name="Done">Done</string>
    <string name="Submit">Submit</string>
    <string name="Forgot">Forgot</string>
    <string name="Change_password">Change Password</string>
    <string name="Create">Create</string>
    <string name="Confirm">Confirm</string>
    <string name="About_us">About us</string>
    <string name="Car_number">Car number</string>
    <string name="brand">brand</string>
    <string name="model">model</string>
    <string name="Add">Add</string>
    <string name="Number_plate">Number plate</string>
    <string name="Current_odometer">Car Current Mileage</string>
    <string name="Profile">Profile</string>
    <string name="Copy_Referral_code">Referral code</string>
    <string name="Contact_us">Write to us</string>
    <string name="Tutorials">Tutorials</string>
    <string name="Latest_marketing">Latest marketing</string>
    <string name="Product_portfolio">Product Line Up</string>
    <string name="Products">Products</string>
    <string name="Signout">Sign Out</string>
    <string name="Home">Home</string>
    <string name="Notifications">Notifications</string>
    <string name="Settings">Settings</string>
    <string name="Update">Update</string>
    <string name="Name">Name</string>
    <string name="City_email">City</string>
    <string name="Mobile">Mobile</string>
    <string name="Select_Gender">Select Gender</string>
    <string name="Other">Other</string>
    <string name="Next">Next</string>
    <string name="Mobile_number">Mobile number (523xxxxxx)</string>
    <string name="Sign_in">Sign in</string>
    <string name="User">User</string>
    <string name="salesman">Shopkeeper</string>
    <string name="Do_you_have_a_referral_code">Do you have a referral code?</string>
    <string name="Become_a_seller">Become a Seller?</string>
    <string name="are_you_a_salesman">Are you a Seller?</string>
    <string name="are_you_a_user">Are you a User?</string>
    <string name="request">Request</string>
    <string name="sign_up">Sign Up</string>
    <string name="feedback">Feedback &amp; suggestions</string>
    <string name="latest_marketing_promotions">Latest Marketing Promotions</string>
    <string name="user_name">Username</string>
    <string name="user_loyality">loyality points</string>
    <string name="notification_title">Notification TItle</string>
    <string name="notification_desc">Notification Description</string>
    <string name="shop_distance">3.5 km</string>
    <string name="shop_city_country">Shop City</string>
    <string name="shop_open">Shop Open</string>
    <string name="promo_title">Promo Title</string>
    <string name="promo_description">Promo Description</string>
    <string name="profile_update">Update your profile</string>
    <string name="update_name">Name</string>
    <string name="update_city">City</string>
    <string name="update_email">Email</string>
    <string name="update_mobile">Mobile</string>
    <string name="update_record">Update</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="gender_arr">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="occupation">Select Occupation</string>
    <string name="Change_lang">Change Language</string>
    <string name="Select_lang">Select Language</string>
    <string name="Tutorials_Screen">Tutorials Screen</string>
    <string name="Cars_list">User Car list</string>
    <string name="car_delete_item">Click on the list item to delete the car</string>
    <string name="please_add_car">Add Your Car</string>
    <string name="please_add_car_num">Car Number (number plate)</string>
    <string name="please_add_current_odometer">Car current mileage</string>
    <string name="create_new_pass">Create new password (Minimum 3 characters)</string>
    <string name="confirm_pass">Confirm password (Minimum 3 characters)</string>
    <string name="Aboutus_title">About Us</string>
    <string name="Aboutus_desc">GS Caltex is a South Korean oil refiner. The company changed its name from LG-Caltex Oil Corporation to GS Caltex Corporation on January 27, 2006. It is jointly owned by Chevron and GS Group. GS Caltex was founded in May 1967 as the first private oil company in Korea. </string>
    <string name="Aboutus_desc_continue">Kixx automotive lubricants are formulated with Triple Double Technology, an exclusive and unique technology developed through extensive research and testing at GS Caltex. Consisting of Triple Anti Technology and Double Boosting Technology, our Triple Double Technology delivers optimized performance anytime, anywhere.</string>
    <string name="feedbackopt">Feedback and Suggestions</string>
    <string name="Message">Message</string>
    <string name="Your_Claim">Tap for claim car history</string>
    <string name="Enter_User_ID">Enter User ID</string>
    <string name="Search">Search</string>
    <string name="Select_Car">Select Car (if applicable)</string>
    <string name="Continue">Continue</string>
    <string name="Continue_language">استمر</string>
    <string name="add_car_if">Add car if you have no car added</string>
    <string name="carnotfound_title">Sorry! No data found</string>
    <string name="carnotfound_desc">Record will be shown on first oil change</string>
    <string name="clicktoaddcar">Click here to add car</string>
    <string name="add_car">Add car</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="enterdailycarmileage">Enter Average Daily Car Mileage (KM’s)</string>
    <string name="oil_recommendation">Oil Recommendation</string>
    <string name="recommended_oil">Recommended Oil</string>
    <string name="with5000km">*with 5000KM Mileage</string>
    <string name="with10000km">*with 10000KM Mileage</string>
    <string name="with15000km">*with 15000KM Mileage</string>
    <string name="onlyrecommendation">* The above is only recommendation \n it is advisable to discuss with the Oil Change Shop before change</string>
    <string name="GMCcarrecommendation">* If Your Car is General Motors Corporation (GMC), It is Advised to Use “Dexos1” Approved Products for Better Performance. For Premium Cars, You Can Use Kixx PAO 10W-40</string>
    <string name="howtochoosebestoilformycar">How to choose best oil for my car?</string>
    <string name="rightoilselection">Selecting the right engine oil can be challenging for most of us. Multiple types, different numbers, letters, variant grades, and viscosity are available in the market. So, how to select the right one? Will it be ideal for the current weather conditions? How long will it last before a change is recommended? Is it ok to mix them up?

Seems like quite a challenging decision to make!  That’s why we usually leave it to the mechanic to recommend one for us.

But not to worry, in this article, we will guide you to pick the right oil for your car.

What kind of oil you need depends on the engine. All new cars will come with a recommended grade listed in the car manual. The grade will be shown in numbers, separated by the letter ‘w’ – for example, 5w40. “The ‘w’ rating, preceded by a number, gives you an indication of how the oil flows (Viscosoty) at winter temperatures and the last number indicates flow (Viscosity) in summer temperatures.”

Not all engine oils are the same. It is important to choose an oil that is suited to your car and local climate conditions to enjoy all its benefits. Following are the main types of oil:
\n\n
"Mineral Oil:

Mineral oil, also known as “conventional oil”, is the most basic &amp; affordable type of engine oils, obtained from refined petroleum crude oil.

Mineral oil is thicker than other oil types which causes a slower flow rate that results in increased fuel consumption.

Mineral engine oils are less resistant to high temperatures and oxidation compared to synthetic engine oils, and have higher liquid points, which makes them favorable for winter conditions and extremely low temperatures.

And because of that, mineral oils require frequent oil changes, after every 5,000 kilometers or every four months.
\n\n"
"Synthetic Oil:
\n

Synthetic oil is a product of complex chemical transformations that are performed either directly on drilled crude petroleum or using preselected molecules. It undergoes more sophisticated modification.They hold many advantages:
 - Synthetics dont break down or sludge up as fast as ordinary mineral-based oils do. In other words, it has less deposit formation which leads to cleaner engines.
- Better engine protection that increases its health &amp; life span
- Stable flow performance &amp; viscosity during extreme temperatures
- Fuel consumption optimization
And not to forget, one of its main perks is that it requires less frequent oil changes. Synthetic oil can last between 8,000 to 15,000 kilometers or every six months before its next change.

However, the main disadvantage of synthetic oils that makes the least favorite to people is that they are slightly more expensive.
 \n\n"
"Semi-Synthetic Oil:

\n
Semi-Synthetic oil is also known as synthetic blends &amp; as hybrid lubricants; is a mixture of mineral and synthetic oils that reserves the best features of both oils.

Semi-synthetic oils can be the best choice for engines that encounter heavy loads caused by intensive usage.

Semi-synthetic oil is more of a wallet-friendly than fully synthetic oil as they are of a lower cost. While getting some benefits of the fully-synthetic oil, it can be your next best choice."
\n\n
"Did You Ever Wondered??
Have you ever looked at the engine oil bottle and wondered what all these numbers and letters stand for? There are many different ways in describing motor oils, each refers to a certain standard of classification. ​​​​​Here are the three standards used for describing the oils:
 - The API standard
 - The SAE standard
 - The ACEA standard
You can get more detailed information of all these standards and lubricants info on below link of our website"
</string>
    <string name="link">https://www.kixxoil.com/support/categoryByPerformance</string>
    <string name="oilrecommendation_yom_not_added">Following Fields Are Missing: \n\n -Year of Manufacture \n -Engine Type \n\n Please Click on "Edit Car Button" to Update your Car".</string>
    <string name="oilrecommendation_nocar_added">You have no cars added, Please add your car</string>
    <string name="Mileagetext">Please Enter to get Notified for Future Oil Change Date and Mileage Which Keeps your Car Healthy</string>
    <string name="selectyourcar">Select your car</string>
    <string name="editcar">Edit Car</string>
</resources>