<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_product_bg"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView84"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mileagetext" />

        <EditText
            android:id="@+id/HomeScreen_dialog_carmileage_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:drawableStart="@mipmap/dialycarmileage"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/enterdailycarmileage"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/HomeScreen_dialog_cancel_btn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/add_car_btn"
                android:text="@string/cancel"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/HomeScreen_dialog_update_btn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/add_car_btn"
                android:text="@string/Update"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>