<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_bg"
    android:padding="10dp"
    tools:context=".User.OilRecommendation.OIl_Recommendation">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/OilRecommendation_back_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="go_back_ar"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24_rwhite" />



                <TextView
                    android:id="@+id/textView69"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="#ffffff" />





            </LinearLayout>

            <LinearLayout
                android:id="@+id/OilRecommendation_back_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="go_back_eng"
                android:visibility="gone"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/imageView41_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24_white" />

                <TextView
                    android:id="@+id/textView69_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="#ffffff" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView70"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/oil_recommendation"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Oil_recommendation_select_car_LL"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/Updateuserprofile_City_IV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_selectacar" />

                <TextView
                    android:id="@+id/Oil_recommendation_select_car_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/selectyourcar"
                    android:textAlignment="textStart"
                    android:textColor="#d3d3d3"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/Updateuserprofile_City_drop_IV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/ms__arrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/Oil_Recommendation_mainframe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/textView71"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recommended_oil"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with5000km"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/OilRecommendation_5000km"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp">

                </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/textView74"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recommended_oil"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView73"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with10000km"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:id="@+id/OIl_Recommendation_10000km_RL"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/OilRecommendation_10000km"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:minHeight="50dp" />
                </RelativeLayout>
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/textView75"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recommended_oil"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView76"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with15000km"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/OilRecommendation_15000km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView77"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/onlyrecommendation"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView78"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/GMCcarrecommendation"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Oil_recommendation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bottom_button"
                    android:text="@string/howtochoosebestoilformycar"
                    android:textColor="#ffffff"
                    android:textSize="10sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/Oil_recommendation_yom_not_added"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView82"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/oilrecommendation_yom_not_added"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/Oil_recommendation_Update_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bottom_button"
                        android:text="@string/editcar"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Oil_recommendation_no_Car_added"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView821"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/oilrecommendation_nocar_added"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/Oil_recommendation_add_car_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bottom_button"
                        android:text="@string/add_car"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>